# steganography

./: CImg.h  CMakeLists.txt  CrowServer.cpp  HelperFunctions.cpp  Image.cpp  JpegCustom.cpp  JpegCustom.h  NetworkTest.cpp  NeuralNetwork.cpp  NeuralNetwork.h  README.md  StegoJPGNetworkPrediction.cpp  StegoLib.h  StegoPNGNetworkPrediction.cpp  jpegformat.txt
